--- a/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj
+++ b/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj
@@ -138,6 +138,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Nodo.h" />
+    <ClInclude Include="Pila.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
