--- a/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj.filters
+++ b/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Pila.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Nodo.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
