--- a/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj
+++ b/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj
@@ -139,7 +139,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Nodo.h" />
+    <ClInclude Include="NodoGenerico.h" />
     <ClInclude Include="Pila.h" />
+    <ClInclude Include="PilaGenerica.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
