Evaluacion y resultado de funcion

--- a/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj
+++ b/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj
@@ -140,8 +140,10 @@
   <ItemGroup>
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="NodoGenerico.h" />
+    <ClInclude Include="NodoGenericoD.h" />
     <ClInclude Include="Pila.h" />
     <ClInclude Include="PilaGenerica.h" />
+    <ClInclude Include="PilaGenericaD.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
