--- a/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj.filters
+++ b/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="NodoGenerico.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="PilaGenericaD.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="NodoGenericoD.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProyectoPolaca.cpp">
