Evalua y opera sen,cos,tan

--- a/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj.filters
+++ b/ProyectoPolaca/ProyectoPolaca/ProyectoPolaca.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="NodoGenericoD.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="qrcodegen.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProyectoPolaca.cpp">
@@ -49,6 +52,9 @@
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <Filter>Archivos de encabezado</Filter>
+    </ClCompile>
+    <ClCompile Include="qrcodegen.cpp">
+      <Filter>Archivos de código fuente</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
